# makhos

./: CMakeLists.txt  README.md
assets/: checker-read.aseprite  checkers-sprite.tps
include/: Checker.hpp  Constants.hpp  GameEvent.hpp  GameLoop.hpp  GameObject.hpp  GameRoom.hpp  GameWindow.hpp  Globals.hpp  GridObject.hpp  MainMenu.hpp  PawnObject.hpp  Primitive.hpp  Scene.hpp  SimpleAI.hpp  SinglePlayerMenu.hpp  TextButton.hpp  ZTexture.hpp
src/: Checker.cpp  Constants.cpp  GameEvent.cpp  GameLoop.cpp  GameObject.cpp  GameRoom.cpp  GameWindow.cpp  GridObject.cpp  MainMenu.cpp  PawnObject.cpp  Primitive.cpp  Scene.cpp  SimpleAI.cpp  SinglePlayerMenu.cpp  TextButton.cpp  ZTexture.cpp  later.cpp  main.cpp
